ARM-Network/NSG/Template-NSG/NSG.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "networkSecurityGroupName": {
            "type": "String"
        },
        "location": {
            "type": "String"
        }
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "name": "[parameters('networkSecurityGroupName')]",
            "apiVersion": "2015-06-15",
            "location": "[parameters('location')]",
            "properties": {
              "securityRules": [
                  {
                      "name": "ssh",
                      "properties": {
                          "protocol": "TCP",
                          "sourcePortRange": "*",
                          "destinationPortRange": "22",
                          "sourceAddressPrefix": "192.168.224.64/26",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 100,
                          "direction": "Inbound"
                      }
                  },
                  {
                      "name": "Tomcat",
                      "properties": {
                          "protocol": "TCP",
                          "sourcePortRange": "*",
                          "destinationPortRange": "80",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 110,
                          "direction": "Inbound"
                      }
                  },
                  {
                      "name": "TomcatWeb",
                      "properties": {
                          "protocol": "TCP",
                          "sourcePortRange": "*",
                          "destinationPortRange": "8080",
                          "sourceAddressPrefix": "*",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 120,
                          "direction": "Inbound"
                      }
                  },
                  {
                      "name": "MySQL",
                      "properties": {
                          "protocol": "TCP",
                          "sourcePortRange": "*",
                          "destinationPortRange": "3306",
                          "sourceAddressPrefix": "192.168.224.64/26",
                          "destinationAddressPrefix": "*",
                          "access": "Allow",
                          "priority": 130,
                          "direction": "Inbound"
                      }
                  }
              ]
            }
        }
    ]
}
